--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
   <script src="https://cdn.jsdelivr.net/npm/babel-standalone@7.22.5/babel.min.js"></script>
   <style>
     body {
-      background: linear-gradient(135deg, #0f172a 0%, #1e3a8a 100%);
+      /* background: linear-gradient(135deg, #0f172a 0%, #1e3a8a 100%); */
+      background-color: black;
       min-height: 100vh;
     }
     .fade-in {
